# muggled_dpt

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  results_explainer.md  run_3dviewer.py  run_image.py  run_video.py
.readme_assets/: results_explainer.md
analysis/: block_norm_visualization.py
experiments/: README.md  attention_visualization.py  block_norm_visualization.py  depth_masking.py  export_onnx.py  fusion_scaling.py
lib/: README.md  dpt_model.py  make_beit_dpt.py  make_depthanything_dpt.py  make_depthanythingv1_dpt.py  make_depthanythingv2_dpt.py  make_dpt.py  make_swinv2_dpt.py
lib/demo_helpers/: README.md  loading.py  misc.py  model_capture.py  plane_fit.py  postprocess.py  saving.py  text.py  ui.py  video.py  visualization.py
lib/v1_depthanything/: README.md  fusion_model.py  head_model.py  image_encoder_model.py  patch_embed.py  reassembly_model.py
lib/v2_depthanything/: README.md  fusion_model.py  head_model.py  image_encoder_model.py  patch_embed.py  reassembly_model.py
lib/v31_beit/: README.md  fusion_model.py  head_model.py  image_encoder_model.py  image_prepost_processor.py  patch_embed.py  reassembly_model.py
lib/v31_swinv2/: README.md  fusion_model.py  head_model.py  image_encoder_model.py  patch_embed.py  reassembly_model.py
model_weights/: README.md
muggled_dpt/: README.md  make_depthanythingv2_dpt.py  make_swinv2_dpt.py
muggled_dpt/demo_helpers/: crop_ui.py  history_keeper.py  loading.py  model_capture.py  plane_fit.py  (+1 more)
simple_examples/: README.md  depth_prediction.py  internal_features.py
(+108 files in other folders)
